# sica-kitchen

./: .env.example  .gitignore  Dockerfile  README.md  SiCa Kitchen main.ipynb  pyproject.toml
notebooks/: elie.ipynb  noe.ipynb
src/backend/: agents.py  orchestrator.py
src/backend/utils/: config.py  kroger.py  logging.py  prompts.py  spoonacular.py
src/backend/utils/kroger/: __init__.py  interfaces.py  services.py
src/backend/utils/spoonacular/: __init__.py  interfaces.py  services.py
src/frontend/: app.py
src/frontend/utils/: log_displayer.py
src/sica_kitchen/: SiCaKi1.5.ipynb  __init__.py
